--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             </div>
             <div class="nav-links">
               <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Using</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Categories</a></li>
-                <li><a href="">Brands</a></li>
-                <li><a href="">Offers</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#section-1">Home</a></li>
+                <li><a href="#section-3">Using</a></li>
+                <li><a href="#section-4">About</a></li>
+                <li><a href="#section-5">Categories</a></li>
+                <li><a href="#container2">Brands</a></li>
+                <li><a href="#section-2">Offers</a></li>
+                <li><a href="#section-6">Contact</a></li>
                 <button class="get-app">
                   Get App <span><i class="fa-brands fa-google-play"></i></span>
                 </button>
@@ -178,7 +178,7 @@
             </div>
           </div>
         </div>
-        <div class="container2">
+        <div class="container2" id="container2">
           <h2>BRANDS</h2>
           <p>
             Magnam ex aliquid fuga eum quidem. Sit sint consectetur velit.
